--- a/glide.yaml
+++ b/glide.yaml
@@ -51,6 +51,7 @@ import:
   version: 1f49d83d9aa00e6ce4fc8258c71cc7786aec968a
   subpackages:
   - proto
+- package: github.com/eris-ltd/eris-logger
 testImport:
 - package: github.com/stretchr/testify
   subpackages:
