--- a/circle.yml
+++ b/circle.yml
@@ -15,6 +15,7 @@ machine:
 
 dependencies:
   override:
+    - apt-get install net-tools
     - sudo curl -sSL -o /usr/bin/docker http://s3-external-1.amazonaws.com/circle-downloads/docker-$DOCKER_VERSION-circleci; sudo chmod 0755 /usr/bin/docker
     - sudo curl -sSL -o /usr/bin/docker-machine https://github.com/docker/machine/releases/download/v$DOCKER_MACHINE_VERSION/docker-machine-linux-x86_64; sudo chmod 0755 /usr/bin/docker-machine
     - sudo start docker
