still getting a panic on call, but it appears a fix is in sight
Signed-off-by: RJ Catalano <rj@monax.io>

--- a/tests/jobs_fixtures/app05-deploy_query_contracts_and_testing_rendering_solc_int_type/epm.yaml
+++ b/tests/jobs_fixtures/app05-deploy_query_contracts_and_testing_rendering_solc_int_type/epm.yaml
@@ -10,7 +10,7 @@ jobs:
 
 - name: setStorage
   call:
-      destination: $deployStorageK
+      destination: $deployStorageK.storage.sol:Storage
       function: set
       data:
         - $setStorageBase
