got call done, query contract
Signed-off-by: RJ Catalano <rj@monax.io>

--- a/tests/jobs_fixtures/app05-deploy_query_contracts_and_testing_rendering_solc_int_type/epm.yaml
+++ b/tests/jobs_fixtures/app05-deploy_query_contracts_and_testing_rendering_solc_int_type/epm.yaml
@@ -17,7 +17,7 @@ jobs:
 
 - name: queryStorage
   query-contract:
-      destination: $deployStorageK
+      destination: $deployStorageK.storage.sol:Storage
       function: get
 
 - name: assertStorage
